# MIDI-RS

./: Cargo.toml  README.md
assets/shaders/: note.wgsl  overlay.wgsl
src/: config.rs  lib.rs  main.rs  performance.rs
src/midi/: mod.rs  note.rs  parser.rs  player.rs
src/renderer/: mod.rs  note_renderer.rs  overlay.rs  piano_renderer.rs  pipeline.rs
src/ui/: controls.rs  input.rs  mod.rs
