[package]
name = "midi-rs"
version = "0.1.0"
edition = "2021"
authors = ["Cycl0o0"]
description = "High-performance Black MIDI visualizer in Rust"
repository = "https://github.com/Cycl0o0/MIDI-RS"

[dependencies]
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
glam = "0.25"
midly = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
